# chrontext

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  IMPORTANT TODOS  LICENSE  README.md
chrontext/: .gitignore  Cargo.toml
chrontext/pki-server/own/: cert.der
chrontext/pki-server/private/: private.pem
chrontext/pki/own/: cert.der
chrontext/pki/private/: private.pem
chrontext/src/: combiner.rs  constants.rs  constraints.rs  engine.rs  errors.rs  find_query_variables.rs  lib.rs  preparing.rs  preprocessing.rs  pushdown_setting.rs  query_context.rs  remove_sugar.rs  rewriting.rs  sparql_database.rs  sparql_result_to_polars.rs  static_sparql.rs  timeseries_database.rs  timeseries_query.rs
chrontext/src/combiner/: lazy_aggregate.rs  lazy_expressions.rs  lazy_graph_patterns.rs  lazy_order.rs  solution_mapping.rs  static_subqueries.rs  time_series_queries.rs
chrontext/src/combiner/lazy_expressions/: exists_helper.rs
chrontext/src/combiner/lazy_graph_patterns/: distinct.rs  extend.rs  filter.rs  group.rs  join.rs  left_join.rs  minus.rs  order_by.rs  project.rs  union.rs
chrontext/src/preparing/: expressions.rs  graph_patterns.rs  synchronization.rs
chrontext/src/preparing/expressions/: and_expression.rs  binary_ordinary_expression.rs  coalesce_expression.rs  exists_expression.rs  function_call_expression.rs  if_expression.rs  in_expression.rs  not_expression.rs  or_expression.rs  unary_ordinary_expression.rs
chrontext/src/preparing/graph_patterns/: bgp_pattern.rs  distinct_pattern.rs  extend_pattern.rs  filter_expression_rewrites.rs  filter_pattern.rs  graph_pattern.rs  group_pattern.rs  join_pattern.rs  (+10 more)
chrontext/src/rewriting/: aggregate_expression.rs  expressions.rs  graph_patterns.rs  order_expression.rs  project_static.rs  subqueries.rs
chrontext/src/sparql_database/: sparql_embedded_oxigraph.rs  sparql_endpoint.rs
chrontext/src/timeseries_database/: arrow_flight_sql_database.rs  bigquery_database.rs  opcua_history_read.rs  simple_in_memory_timeseries.rs  timeseries_bigquery_database.rs  timeseries_dremio_database.rs  timeseries_in_memory_database.rs  timeseries_opcua_database.rs  timeseries_sql_rewrite.rs
chrontext/tests/: common.rs  opcua_data_provider.rs  query_execution.rs  query_execution_arrow_sql.rs  query_execution_benchmark_case.rs  query_execution_opcua.rs  query_execution_syntactic_sugar.rs  rewrites.rs  timeseries_in_memory_database.rs
chrontext/tests/dremio_docker/: dremio.conf  to_parquet.py  ts.csv  ts.parquet
chrontext/tests/query_execution/: expected_coalesce_query.csv  expected_in_expression.csv  expected_minus_query.csv  expected_optional_clause_query.csv  expected_path_group_by_query.csv  expected_pushdown_group_by_second_having_hybrid.csv  expected_pushdown_not_exists_aggregated_timeseries_value_hybrid.csv  expected_union_query.csv  testdata.sparql
chrontext/tests/query_execution_benchmark_case/: ep2.csv  ep6.csv  ep7.csv  ep8.csv  expected_multi_should_pushdown.csv  oper8.csv  parquet_to_csv.py  testdata.sparql  wdir3.csv  wdir4.csv  wdir5.csv  wdir6.csv  wdir7.csv  wdir8.csv  wsp2.csv  wsp3.csv  wsp4.csv  wsp6.csv  wsp7.csv  wsp8.csv
chrontext/tests/query_execution_opcua/: expected_basic_query.csv  expected_no_pushdown_because_of_filter_query.csv  expected_pushdown_group_by_five_second_hybrid_query.csv  testdata.sparql
chrontext/tests/query_execution_syntactic_sugar/: testdata.sparql
chrontext/tests/query_execution_testdata/: expected_if_query.csv  expected_pushdown_group_by_concat_agg_hybrid.csv  expected_pushdown_group_by_exists_something_hybrid.csv  expected_pushdown_group_by_hybrid.csv  expected_simple_hybrid.csv  expected_union_of_two_groupby.csv  expected_values_query.csv  testdata.sparql
lib/bigquery-polars/: Cargo.toml  README.md
lib/bigquery-polars/src/: errors.rs  lib.rs  querying.rs
lib/chrontext/: Cargo.toml
lib/chrontext/src/: change_types.rs  combiner.rs  constants.rs  constraints.rs  engine.rs  errors.rs  lib.rs  preparing.rs  preprocessing.rs  rename_vars.rs  rewriting.rs  sparql_database.rs  sparql_result_to_polars.rs  splitter.rs  web.rs
lib/chrontext/tests/: opcua_data_provider.rs  query_execution.rs  query_execution_benchmark_case.rs  query_execution_opcua.rs  rewrites.rs
lib/flight/: Cargo.toml
lib/flight/src/: client.rs  server.rs
lib/virtualization/: Cargo.toml
lib/virtualization/old_stuff/: sql_rewrite.rs
lib/virtualization/src/: bigquery.rs  errors.rs  lib.rs  opcua.rs  python.rs  timeseries_bigquery_database.rs  timeseries_opcua_database.rs
lib/virtualized_query/: Cargo.toml
lib/virtualized_query/src/: lib.rs  pushdown_setting.rs  python.rs
postgres/: Cargo.toml
postgres/src/: catalog.rs  config.rs  server.rs
py_chrontext/: .gitignore  Cargo.toml  pyproject.toml
py_chrontext/chrontext/: __init__.py  chrontext.pyi
py_chrontext/chrontext/vq/: __init__.py  __init__.pyi
py_chrontext/new_tests_todo/tests/: common.rs  query_execution.rs  query_execution_benchmark_case.rs  query_execution_opcua.rs  query_execution_syntactic_sugar.rs  rewrites.rs  timeseries_in_memory_database.rs
py_chrontext/python/chrontext/: .gitignore  __init__.py  _chrontext.pyi  semantic_dataframe.py
py_chrontext/src/: errors.rs  lib.rs
py_chrontext/tests/: .gitignore  FIX_OPENSSL_CONDA  conftest.py  disable_test_opcua.py  my_graph.nt  my_graph.ttl  requirements.txt  test_arrow.py  test_arrow_flight_sql.py  test_bigquery.py  test_databricks.py  test_opcua.py  test_parquet_based.py  test_python_database.py  test_readme_tutorial.py
py_chrontext/tests/dremio_docker/: Dockerfile
py_chrontext/tests/my_db/: __init__.py
py_chrontext/tests/testdata/: expected_simplified_opcua_case.csv  testdata_arrow_flight_sql.nt  testdata_arrow_flight_sql.sparql  testdata_opcua_history_read.sparql
timeseries_outpost/: Cargo.toml
timeseries_outpost/src/: lib.rs  timeseries_bigquery_database.rs  timeseries_opcua_database.rs  timeseries_sql_rewrite.rs
timeseries_outpost/src/timeseries_sql_rewrite/: expression_rewrite.rs
timeseries_query/: Cargo.toml
timeseries_query/src/: lib.rs  pushdown_setting.rs
(+194 files in other folders)
