[workspace]
resolver = "1"
members = [
    "lib/chrontext",
    "lib/virtualization",
    "lib/postgres",
    "lib/virtualized_query",
    "py_chrontext",
    "lib/flight",
    "lib/sparql_database"
]

[workspace.dependencies]
#spargebra = { path = "../maplib/lib/spargebra", features = ["rdf-star"]}
#query_processing = { path = "../maplib/lib/query_processing"}
#pydf_io = { path = "../maplib/lib/pydf_io"}
#representation = { path = "../maplib/lib/representation", features = ["rdf-star"]}
#templates = { path = "../maplib/lib/templates"}
spargebra = { git = "https://github.com/DataTreehouse/maplib", rev="ec762caed6894a63f06943cac5c64cc8d8153a10" }
query_processing = { git = "https://github.com/DataTreehouse/maplib", rev="ec762caed6894a63f06943cac5c64cc8d8153a10" }
pydf_io = { git = "https://github.com/DataTreehouse/maplib", rev="ec762caed6894a63f06943cac5c64cc8d8153a10" }
representation = { git = "https://github.com/DataTreehouse/maplib", rev="ec762caed6894a63f06943cac5c64cc8d8153a10" }
templates = { git = "https://github.com/DataTreehouse/maplib", rev="ec762caed6894a63f06943cac5c64cc8d8153a10" }


sparesults = { version = "0.2.3" }
oxrdf = { version = "0.2.2" }
oxrdfio = { version = "0.1.5" }

polars = "0.45.1"
tonic = "0.12.3"
tokio = "1.32.1"
arrow-flight = "54.1.0"
futures = "0.3.31"
bincode = "1.3.3"
log = "0.4.21"
pyo3 = { version="0.22.6", features = ["abi3-py39"] }
reqwest = "0.12.5"
env_logger = "0.11.3"
thiserror = "1.0.58"
async-recursion = "1.1.0"
async-trait = "0.1.81"
chrono = "0.4.37"
filesize = "0.2.0"
serde = "1.0.203"
serde_json = "1.0.117"
secrecy = "=0.10.3"
gcp-bigquery-client = "0.25.1"
rayon = "1.10.0"
opcua = {version="0.12.0", features = ["vendored-openssl"]}
url = "2.5.2"
uuid = {version = "1.10.0", features = ["fast-rng", "v4"]}
rustls = {version = "0.23.18"}

[patch.crates-io]
polars = { git = 'https://github.com/pola-rs/polars', rev="841c387d99d7024037556c4ef79d96bf2caac397" }
polars-core = { git = 'https://github.com/pola-rs/polars', rev="841c387d99d7024037556c4ef79d96bf2caac397" }