[workspace]
resolver = "1"
members = [
    "lib/chrontext",
    "lib/virtualization",
    "lib/postgres",
    "lib/virtualized_query",
    "py_chrontext",
    "lib/flight",
    "lib/sparql_database"
]

[workspace.dependencies]
#spargebra = { path = "../maplib/lib/spargebra", features = ["rdf-star"]}
#query_processing = { path = "../maplib/lib/query_processing"}
#pydf_io = { path = "../maplib/lib/pydf_io"}
#representation = { path = "../maplib/lib/representation", features = ["rdf-star"]}
#templates = { path = "../maplib/lib/templates"}
spargebra = { git = "https://github.com/DataTreehouse/maplib", rev="c3f59a6210de3f003e455c63bace8b03579d2657" }
query_processing = { git = "https://github.com/DataTreehouse/maplib", rev="c3f59a6210de3f003e455c63bace8b03579d2657" }
pydf_io = { git = "https://github.com/DataTreehouse/maplib", rev="c3f59a6210de3f003e455c63bace8b03579d2657" }
representation = { git = "https://github.com/DataTreehouse/maplib", rev="c3f59a6210de3f003e455c63bace8b03579d2657" }
templates = { git = "https://github.com/DataTreehouse/maplib", rev="c3f59a6210de3f003e455c63bace8b03579d2657" }


sparesults = { version = "0.2.3" }
oxrdf = { version = "0.2.2" }
polars = "0.46.0"
tonic = "0.12.3"
tokio = "1.44.2"
arrow-flight = "54.3.1"
futures = "0.3.31"
bincode = { version="2.0.1", features = ["serde"] }
log = "0.4.21"
pyo3 = { version= "0.24.1", features = ["abi3-py39"] }
reqwest = "0.12.5"
env_logger = "0.11.3"
thiserror = "2.0.12"
async-recursion = "1.1.0"
async-trait = "0.1.81"
serde = "1.0.203"
serde_json = "1.0.117"
secrecy = "=0.10.3"
gcp-bigquery-client = "0.25.1"
rayon = "1.10.0"
uuid = {version = "1.10.0", features = ["fast-rng", "v4"]}
rustls = {version = "0.23.18"}
url = {version = "2.5.4"}

[patch.crates-io]
polars = { git = 'https://github.com/pola-rs/polars', rev="319a9a84ab573886b2a13548a8e462fee353acef" }
polars-core = { git = 'https://github.com/pola-rs/polars', rev="319a9a84ab573886b2a13548a8e462fee353acef" }