[package]
name = "postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
chrontext = { path = "../chrontext" }
representation = { workspace = true }
#representation = { git = "https://github.com/DataTreehouse/representation.git", tag="v0.6.6" }
spargebra = { workspace = true, features = ["rdf-star"] }
thiserror = { workspace = true }
