[package]
name = "py_chrontext"
version = "0.8.14"
edition = "2021"

[workspace]

[dependencies]
#representation = {path = "../../representation"}
representation = { git = "https://github.com/DataTreehouse/representation", tag="v0.2.8"}
pyo3 = {version = "0.21.1", features = ["extension-module"]}
chrontext = {path="../chrontext"}
pydf_io = { git = "https://github.com/DataTreehouse/pydf_io", tag="v0.7.0"}
#pydf_io = { path = "../../pydf_io" }
thiserror="1.0.31"
polars = {version="0.38.3", features = ["lazy"]}
oxrdf = "0.1.7"
spargebra = "0.2.8"
simple-error = "0.3.0"
tokio = "1.32.1"
env_logger = "0.11.3"
log="0.4.19"
oxigraph="0.3.22"
filesize = "0.2.0"

[lib]
name = "chrontext"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"

# Conditional dependency specification of mimalloc and jemallocator copied from: https://github.com/pola-rs/polars/blob/main/py-polars/Cargo.toml
# It has the following license
# Copyright (c) 2020 Ritchie Vink
#
#Permission is hereby granted, free of charge, to any person obtaining a copy
#of this software and associated documentation files (the "Software"), to deal
#in the Software without restriction, including without limitation the rights
#to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#copies of the Software, and to permit persons to whom the Software is
#furnished to do so, subject to the following conditions:
#
#The above copyright notice and this permission notice shall be included in all
#copies or substantial portions of the Software.
#
#THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
#SOFTWARE.
[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1.37", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5.4", features = ["disable_initial_exec_tls"] }