[package]
name = "bigquery-polars"
version = "0.2.3"
edition = "2021"

[dependencies]
gcp-bigquery-client = {workspace = true, features = ["rust-tls"]}
polars = {workspace = true, features = ["dtype-full", "cse", "nightly", "performant", "timezones", "lazy"]}
thiserror.workspace = true
backoff.workspace = true
#Keeping tokio at this version (1.32.1) due to semver issue with yup-oauth
tokio = {workspace = true, features = ["time"]}
rayon.workspace = true
