[package]
name = "chrontext"
version = "0.4.0"
edition = "2021"

[dependencies]
timeseries_outpost = {path = "../timeseries_outpost"}
timeseries_query = { path = "../timeseries_query" }
polars = { workspace = true, features = [
    "lazy",
    "concat_str",
    "unique_counts",
    "list_eval",
    "abs",
    "round_series",
    "is_in",
    "cum_agg",
    "dtype-full",
    "cse",
    "nightly",
    "performant"] }
tokio = { workspace = true, features = ["rt-multi-thread", "rt"] }
log = { workspace = true }
spargebra = { workspace = true }
representation = { workspace=true }
query_processing = { workspace = true }
sparesults = { workspace = true }
oxrdf = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
env_logger = { workspace = true }
thiserror = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
oxigraph = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
serde = { workspace = true }
serde_json = { workspace = true }
filesize = { workspace = true }

[dev-dependencies]
bollard.workspace = true
rstest.workspace = true
polars = { workspace = true, features = ["lazy", "unique_counts"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serial_test.workspace = true
futures-util.workspace = true
reqwest = { workspace = true, features = ["stream", "json"] }
opcua.workspace = true