[package]
name = "chrontext"
version = "0.4.0"
edition = "2021"

[dependencies]
virtualization = {path = "../virtualization"}
virtualized_query = { path = "../virtualized_query" }
sparql_database = { path = "../sparql_database" }

polars = { workspace = true, features = [
    "lazy",
    "concat_str",
    "unique_counts",
    "list_eval",
    "abs",
    "round_series",
    "is_in",
    "cum_agg",
    "dtype-full",
    "cse",
    "nightly",
    "performant"] }
log.workspace = true
spargebra.workspace = true
representation.workspace=true
query_processing.workspace = true
sparesults.workspace = true
oxrdf.workspace = true
thiserror.workspace = true
async-recursion.workspace = true
uuid.workspace = true
rayon.workspace = true

