[package]
name = "virtualization"
version = "0.1.0"
edition = "2021"

[dependencies]
virtualized_query = { path="../virtualized_query" }
bigquery-polars = {path = "../bigquery-polars"}

pydf_io.workspace = true
representation.workspace=true
polars = {workspace=true, features=[
    "lazy",
    "dtype-full",
    "nightly",
    "performant"] }
opcua.workspace= true
async-trait.workspace = true
log.workspace = true
oxrdf.workspace = true
query_processing.workspace = true
spargebra.workspace=true
chrono = { workspace = true, features = ["clock"] }
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
serde_json.workspace = true
pyo3.workspace = true

