[package]
name = "virtualization"
version = "0.1.0"
edition = "2021"

[features]
opcua = ["dep:opcua"]

[dependencies]
virtualized_query = { path="../virtualized_query" }
bigquery-polars = {path = "../bigquery-polars"}

templates.workspace = true
pydf_io.workspace = true
representation.workspace=true
gcp-bigquery-client.workspace=true
polars = {workspace=true, features=[
    "lazy",
    "dtype-full",
    "nightly",
    "performant"] }
opcua = {workspace= true, optional = true }
oxrdf.workspace = true
query_processing.workspace = true
spargebra.workspace=true
chrono = { workspace = true, features = ["clock"] }
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
serde_json.workspace = true
pyo3.workspace = true
url.workspace = true
log.workspace = true
