[package]
name = "virtualized_query"
version = "0.1.0"
edition = "2021"

[dependencies]
representation.workspace = true
query_processing.workspace = true
templates.workspace = true

polars = {workspace=true, features=[
    "lazy",
    "dtype-full",
    "nightly",
    "performant"] }
spargebra.workspace = true
serde.workspace = true
pyo3.workspace = true